Bad handling of non-existent origin directory in SaveOriginAccessTimeOp::DoDirectoryWork
Categories
(Core :: Storage: Quota Manager, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox86 | --- | fixed |
People
(Reporter: sg, Assigned: sg)
References
Details
Attachments
(1 file)
https://searchfox.org/mozilla-central/rev/2a24205479519e70c0574929f45730d285141584/dom/quota/ActorsParent.cpp#8282 appears to expect that GetBinaryOutputStream returns nullptr in case of a non-existent file. However, it return a NS_ERROR_UNEXPECTED in that case. Since that doesn't allow to discriminate between a non-existent file and other errors without ambiguity, it should probably check for existence of the file before trying to open it. The comment above the line confusingly refers to existence of the origin directory. This should also be adjusted, and resolve the implicit assumption that existence of the origin directory and of the metadata file are equivalent.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Comment 2•4 years ago
|
||
This might fix bug 1582384, bug 1582385, bug 1582386 and bug 1582387.
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
Comment 3•4 years ago
|
||
(In reply to Jan Varga [:janv] from comment #2)
This might fix bug 1582384, bug 1582385, bug 1582386 and bug 1582387.
Once this lands we should have a look at those bugs, thus marking them as blocked.
| Assignee | ||
Comment 4•4 years ago
|
||
I wonder what tool produces/tracks these warning counts?
Comment 6•4 years ago
|
||
| bugherder | ||
Description
•