Bug 1686910 - Check for existence of origin directory explicitly in SaveOriginAccessTimeOp::DoDirectoryWork. r=dom-workers-and-storage-reviewers,janv

Differential Revision: https://phabricator.services.mozilla.com/D101943